# ReturnDynamicsMCMC

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  posterior_output.csv  ref_simul.csv  run.sh  setup.txt
include/: MyStatDist.h  ReturnDynamicsMCMC.h
log/: MCMC_log_latent_1.csv  MCMC_log_latent_10.csv  MCMC_log_latent_11.csv  MCMC_log_latent_12.csv  MCMC_log_latent_13.csv  MCMC_log_latent_14.csv  MCMC_log_latent_15.csv  MCMC_log_latent_16.csv  MCMC_log_latent_17.csv  MCMC_log_latent_18.csv  MCMC_log_latent_19.csv  MCMC_log_latent_2.csv  MCMC_log_latent_20.csv  MCMC_log_latent_21.csv  MCMC_log_latent_22.csv  MCMC_log_latent_23.csv  MCMC_log_latent_24.csv  MCMC_log_latent_25.csv  MCMC_log_latent_26.csv  MCMC_log_latent_27.csv  MCMC_log_latent_28.csv  MCMC_log_latent_29.csv  MCMC_log_latent_3.csv  MCMC_log_latent_30.csv  MCMC_log_latent_4.csv  MCMC_log_latent_5.csv  MCMC_log_latent_6.csv  MCMC_log_latent_7.csv  MCMC_log_latent_8.csv  MCMC_log_latent_9.csv  MCMC_log_obs_1.csv  MCMC_log_simul_1.csv  MCMC_log_simul_10.csv  MCMC_log_simul_11.csv  MCMC_log_simul_12.csv  MCMC_log_simul_13.csv  MCMC_log_simul_14.csv  MCMC_log_simul_15.csv  MCMC_log_simul_16.csv  MCMC_log_simul_17.csv  (+22 more)
plot_script/: plot_script.ipynb  plot_script.py
plot_script/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  plot_script-checkpoint.ipynb
src/: MyStatDist.cpp  main.cpp  posterior.cpp  rdMCMC.cpp
